libs/preprocessor/tests/errors/pe1_unexpected_token/stderr.ansi
[31m[PE1] Error:[0m unexpected token
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:19[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mH[0m[38;5;249mE[0m[38;5;249mL[0m[38;5;249mL[0m[38;5;249mO[0m[38;5;249m([0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m1[0m[38;5;201m;[0m[38;5;249m [0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249mH[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m1[0m[38;5;249m [0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m2[0m
 [38;5;240m  │[0m                   [38;5;201m┬[0m  
 [38;5;240m  │[0m                   [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m Unexpected token
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: expected one of: `[38;5;201m{variable}[0m`, `[38;5;201m,[0m`, `[38;5;201m)[0m`
[38;5;246m───╯[0m
